--- a/vignettes/003_transformasi.Rmd
+++ b/vignettes/003_transformasi.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Anda akan menggunakan fungsi `spread` dari paket `tidyr` untuk mengubah memperbaiki dataset 'table2' (juga dari paket `tidyr`). Aktifkanlah paket `tidyr`, lihat dataset 'table2'. Apakah yang membuat dataset tersebut *non-tidy* data? Bukalah dokumentasi fungsi `spread` dengan menjalankan `?nama_fungsi` atau `help(nama_fungsi)`!
 
 ```{r}
-___(tidyr)
+library(tidyr)
 table2
 ```
 
@@ -39,7 +39,11 @@ table2_tidy <- spread(table2, key = "type", value = "count")
 Selanjutnya Anda juga akan memperbaiki dataset 'table4a'. Cetaklah dataset tersebut dan dapatkah Anda menyebutkan alasan mengapa dataset tersebut tidak *tidy* dan *tame*?
 
 ```{r}
-___ # cetak dataset table4a
+table4a # cetak dataset table4a tidak usah pakai library lagi
+```
+```{r}
+library(dplyr)
+glimpse(table4a) # contoh table4a ini kalau gak dirapiin pakai tidy
 ```
 
 Dataset 'table4a' dapat diperbaiki dengan menggunakan fungsi `gather` dari `tidyr`. Anda dapat mempelajari fungsi tersebut dengan menjalankan `?gather`.
@@ -56,24 +60,32 @@ Silakan lakukan hal serupa pada dataset 'table4b' namun dengan menggunakan "popu
 ```{r}
 table4b
 
-table4b_tidy <- ___
+table4b_tidy <- table4b
+```
+```{r}
+gather(table4b, key = "year", value = "population", 2:3)
+
+table4b_tidy <- table4b %>% 
+  gather(key = "year", value = "population", 2:3) # menggunakan tidyverse syntax, pipe %>%
 ```
 
 Dataset 'table4a_tidy' dan 'table4b_tidy' tersebut dapat digabungkan menjadi satu dataset. Hal tersebut dapat dilakukan dengan menggunakan fungsi `left_join` dari paket `dplyr` seperti contoh berikut:
 
 ```{r}
-___ # mengaktifkan paket dplyr
+library(dplyr)# mengaktifkan paket dplyr
 mydata <- left_join(table4a_tidy, table4b_tidy)
 ```
-
+```{r}
+mydata
+```
 
 ## Data Wrangling
 
 Dataset mydata tersebut merupakan subset dataset Tubercolusis yang diolah dari data 'who' dan 'population' (dari paket `tidyr`). Lihatlah ringkasan kedua tersebut dengan menggunakan `glimpse`!
 
 ```{r}
-___(who)
-___(population)
+glimpse(who)
+glimpse(population)
 ```
 
 Sekarang kita akan membuat versi utuh dari dataset 'mydata' dengan menggunakan data seluruh negara pada dataset 'who' sebagai berikut:
@@ -114,9 +126,18 @@ Dapatkah Anda membuat ringkasan apa saja hal apa saja yang dilakukan pada proses
 7. ...
 8. ...
 
-Cek apakah dataset 'tb8' sama dengan dataset 'tb_all'! Menurut Anda, cara penulisan *syntax* manakah yang lebih mudah digunakan dan dipahami?
+Cek apakah dataset 'tb8' sama dengan dataset 'tb_all'! Menurut Anda, cara penulisan *syntax* manakah yang lebih mudah digunakan dan dipahami? enak pake tb_all 
 
 ```{r}
-___(tb8, tb_all)
+identical(tb8,tb_all)
 ```
 
+
+```{r}
+tb8
+```
+
+
+```{r}
+tb_all #e
+```
