--- a/vignettes/004_visualisasi.Rmd
+++ b/vignettes/004_visualisasi.Rmd
@@ -24,14 +24,14 @@ knitr::opts_chunk$set(echo = TRUE)
 Dalam modul visualisasi ini, Anda akan menggunakan data `evals` dan paket `ggplot2`. Aktifkanlah paket untuk mengimpor data dan paket `ggplot2`!
 
 ```{r}
-___
-___
+library(ggplot2)
+library(readr)
 ```
 
 Sekarang impor dataset `evals` melalui pranala "https://www.openintro.org/stat/data/evals.csv". Simpan obyek data tersebut dengan nama `evals`. (Petunjuk: `?read_csv`)
 
 ```{r}
-evals <- read_csv("___")
+evals <- read_csv("https://www.openintro.org/stat/data/evals.csv")
 evals
 ```
 
@@ -52,15 +52,15 @@ ggplot(data = evals, aes(x = age, y = bty_avg)) +
 Sekarang dapatkah Anda membuat grafik dengan `gender` pada sumbu x dan `bty_avg` pada sumbu y? Serta gantilah `geom_point()` menjadi `geom_boxplot`. Grafik dan informasi apakah yang Anda dapatkan?
 
 ```{r}
-ggplot(data = evals, aes(x = ___, y = bty_avg)) +
-  ___
+ggplot(data = evals, aes(x = gender, y = bty_avg)) +
+ geom_boxplot()
 ```
 
 
 Anda dapat menambahkan informasi mengenai variabel lain kedalam plot dengan menempatkannya pada bagian `aes()` dengan menggunakan `aesthetic` yang sesuai. Apa yang akan terjadi saat anda menambahkan informasi 'colour = gender' pada baris kode berikut?
 
 ```{r}
-ggplot(data = evals, aes(x = age, y = bty_avg, colour = ___)) +
+ggplot(data = evals, aes(x = age, y = bty_avg, colour = gender)) +
   geom_point()
 ```
 
@@ -69,33 +69,33 @@ Selain menambahkan `aesthetic`, Anda juga dapat menambahkan `geometry` dengan ca
 ```{r}
 ggplot(data = evals, aes(x = age, y = bty_avg, colour = gender)) +
   geom_point() +
-  ___
+  geom_line()
 ```
 
 Pada contoh-contoh di atas, Anda menggunakan nilai `x` dan `y` sebagai `aesthetic`. Bagaimana jika Anda hanya menggunakan `x` saja? Jenis `geometry` apakah yang cocok digunakan jika hanya menggunakan satu nilai `x` tersebut? (Petunjuk: distribusi data)
 
 ```{r}
 ggplot(data = evals, aes(x = age)) +
-  geom____(binwidth = 5)
+  geom_histogram(binwidth = 5)
 ```
 
 Anda juga dapat membuat grafik yang berisi prediksi model dengan menggunakan `geom_smooth`. Buatlah grafik tersebut dengan menggunakan `geom_point()` dan `geom_smooth()`! Sumbu `x` adalah 'age' dan sumbu `y` adalag 'score'. (Pada contoh ini kita akan menggunakan metode regresi linear untuk model, sehingga argumen pada `geom_smooth()` diisi dengan 'method = "lm"').
 
 ```{r}
-ggplot(data = evals, aes(x = ___, y = ___)) +
-  ___ +
-  geom____(method = "lm")
+ggplot(data = evals, aes(x = age, y = score)) +
+  geom_point() +
+  geom_smooth(method = "lm")
 ```
 
 Bagaimana jika Anda menambahkan argumen 'colour = ethnicity' ke dalam `aes()`? Apakah yang terjadi dan dapatkah Anda menjelaskannya? Anda dipersilahkan untuk  mengganti label atau menambahkan judul pada grafik dengan menggunakan `labs`.
 
 ```{r}
-ggplot(data = evals, aes(x = age, y = score, colour = ___)) +
+ggplot(data = evals, aes(x = age, y = score, colour = ethnicity)) +
   geom_point() +
   geom_smooth(method = "lm") +
   labs(
-    x = "___",
-    y = "___",
-    title = "___"
+    x = "age",
+    y = "score",
+    title = "Ceritanya Grafik"
   )
 ```
